<resources>
    <string name="app_name">SaveurMarche</string>

    <!-- Permission (geo) -->
    <string name="permission_geoloc_content">Autorise nous a acceder a ta position pour pouvoir localiser les marchés autour de toi</string>
    <string name="permission_geoloc_action_positive">Trouver les marcher</string>
    <string name="permission_geoloc_action_negative">Non merci</string>

    <!-- MainActivity -->
    <string name="map_item_title">Carte</string>
    <string name="market_item_title">Liste marchés</string>

    <!-- LaunchActivity -->
    <string name="launch_loading_text">chargement en cours</string>

    <!-- MarketList -->
    <string name="marketList_search">Chercher par code postal, nom, etc</string>
    <string name="see_market_detail">Voir la fiche</string>

    <!-- MarketDetail -->
    <string name="marketdetail_header_presentation">Les présentations :</string>
    <string name="marketdetail_header_products">Ce qu\'il propose :</string>
    <string name="marketdetail_header_hours">Information et horaires :</string>
    <string name="marketdetail_advice">Le conseil saveur Marché :</string>

</resources>
