<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dip">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="250dp"
            app:srcCompat="@drawable/ic_geoloc_permission" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/permission_geoloc_content"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button_give_geoloc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/permission_geoloc_action_positive"
            android:textAllCaps="false"
            android:theme="@style/AppTheme.Button.white" />

        <Space
            android:layout_width="0dip"
            android:layout_height="8dip" />

        <Button
            android:id="@+id/button_dismiss"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_geoloc_action_negative"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>

</FrameLayout>