<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/marketDetailToolbar"
        style="@style/AppTheme.Toolbar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/dividerColor" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/marketDetailImage"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_market_colorhint"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_marginStart="8dip"
                    android:layout_marginTop="8dip"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/marketDetailTextViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fontFamily="@font/lato_bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="12dip"
                            android:layout_height="12dip"
                            app:srcCompat="@drawable/ic_light_colorhint"/>

                        <TextView
                            android:id="@+id/marketDetailTextViewDistance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dip"
                            android:layout_marginStart="4dip"
                            app:fontFamily="@font/lato" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginBottom="8dip"
                        android:layout_marginTop="8dip"
                        android:background="@color/dividerColor" />

                    <TextView
                        android:clickable="true"
                        android:focusable="true"
                        android:textSize="12sp"
                        android:gravity="end"
                        android:id="@+id/marketDetailUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fontFamily="@font/lato" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="8dip"
                android:layout_marginTop="8dip"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/marketdetail_header_presentation"
                    app:fontFamily="@font/lato_bold"/>

                <TextView
                    android:id="@+id/marketDetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="8dip"
                android:layout_marginTop="8dip"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/marketdetail_header_products"
                    app:fontFamily="@font/lato_bold"/>

                <TextView
                    android:id="@+id/marketDetailProductDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="8dip"
                android:layout_marginTop="8dip"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/marketdetail_header_hours"
                    app:fontFamily="@font/lato_bold"/>

                <TextView
                    android:id="@+id/marketDetailHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>